# Osi_Labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.c
lab1/doc/: 1.docx
lab1/include/: child.h  child1.h  child2.h  parent.h  utils.h
lab1/src/: child.c  child1.c  child2.c  parent.c  utils.c
lab2/: 1000_points.txt  CMakeLists.txt  klastering.cpp  main.cpp  точки
lab2/doc/: 2.docx
lab2/include/: KMeans.h  Point.h  Timer.h  Utils.h
lab2/src/: KMeans.cpp  Timer.cpp  Utils.cpp
lab3/: CMakeLists.txt  go.sh  main.c
lab3/doc/: 3.docx
lab3/include/: error_handling.h  memory_map.h  processes.h
lab3/src/: error_handling.c  memory_map.c  processes.c
lab4/: CMakeLists.txt
lab4/doc/: 4.docx
lab4/include/: gcf.h  sort.h
lab4/programs/program1/: CMakeLists.txt  main.c
lab4/programs/program2/: CMakeLists.txt  main.c
lab4/src/: gcf_euclidean.c  gcf_naive.c  gcf_wrapper.c  sort_bubble.c  sort_quick.c  sort_wrapper.c
lab5-7/: CMakeLists.txt
lab5-7/doc/: 5-7.docx
lab5-7/include/: net_func.h  node.h
lab5-7/src/: client.cpp  worker.cpp
lab5-7/tests/: test_main.cpp
lab8/doc/: 8.odt
tests/: CMakeLists.txt  gcf_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  sort_test.cpp
tests/files_for_lab2/: input_single.txt
